--- a/fraud-detection-extension/package.json
+++ b/fraud-detection-extension/package.json
@@ -13,7 +13,8 @@
     "openai": "^4.90.0",
     "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pdftotext": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
